--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<packaging>war</packaging>
 	<name>devops-test Maven Webapp</name>
 	<url>http://maven.apache.org</url>
-	<version>v1</version>
+	<version>1.0-SNAPSHOT</version>
 	<build>
 		<finalName>devops-test</finalName>
 
