--- a/pom.xml
+++ b/pom.xml
@@ -14,11 +14,17 @@
 			<resource>
 				<directory>src/main/java</directory>
 				<filtering>false</filtering>
+				<includes>
+					<include>**/*.sh</include>
+					<include>**/*.xml</include>
+					<include>**/*.conf</include>
+				</includes>
 			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
 				<includes>
 					<include>**/*.properties</include>
+					<include>**/*.xml</include>
 				</includes>
 				<filtering>false</filtering>
 			</resource>
